fixing logo nav overlap

--- a/main.css
+++ b/main.css
@@ -208,8 +208,6 @@ Fudge Page header
 }
 .mainLogoFudge{
     padding-top:0;
-    margin-top: -20px;
-    opacity:  ;
 }
 #smHomeLogo{
     display: none;
